--- a/arch/arm64/configs/lineage-gtaxllte_defconfig
+++ b/arch/arm64/configs/lineage-gtaxllte_defconfig
@@ -4704,6 +4704,7 @@ CONFIG_INTEGRITY_AUDIT=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
+CONFIG_XOR_BLOCKS=y
 CONFIG_CRYPTO=y
 
 #
