--- a/arch/arm64/configs/lineage-gtaxlwifi_defconfig
+++ b/arch/arm64/configs/lineage-gtaxlwifi_defconfig
@@ -4324,7 +4324,7 @@ CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_EXFAT_SUPPORT_STLOG=y
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
 
 #
 # Pseudo filesystems
