--- a/arch/arm64/configs/lineage-gtaxlwifi_defconfig
+++ b/arch/arm64/configs/lineage-gtaxlwifi_defconfig
@@ -3202,7 +3202,7 @@ CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CH341=y
 # CONFIG_USB_SERIAL_WHITEHEAT is not set
 # CONFIG_USB_SERIAL_DIGI_ACCELEPORT is not set
-# CONFIG_USB_SERIAL_CP210X is not set
+CONFIG_USB_SERIAL_CP210X=y
 # CONFIG_USB_SERIAL_CYPRESS_M8 is not set
 # CONFIG_USB_SERIAL_EMPEG is not set
 CONFIG_USB_SERIAL_FTDI_SIO=y
