--- a/arch/arm64/configs/lineage-gtaxlwifi_defconfig
+++ b/arch/arm64/configs/lineage-gtaxlwifi_defconfig
@@ -444,7 +444,7 @@ CONFIG_ARM64_UAO=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE=""
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
